# JacyJS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  jacy.sh
include/: Exception.h  Jacy.h
include/js/: Jacy.js
include/parser/: Lexer.h  Token.h
include/translator/: Codegen.h  Translator.h
src/: Jacy.cpp  main.cpp
src/parser/: Lexer.cpp  Parser.cpp
src/translator/: Codegen.cpp  Translator.cpp
src/tree/: Printer.cpp
